Ensure a consistent set of scrollbars in tooltip

--- a/packages/tooltip/style/index.css
+++ b/packages/tooltip/style/index.css
@@ -15,6 +15,12 @@
 }
 
 
+.jp-Tooltip > .jp-RenderedText,
+.jp-Tooltip > .jp-RenderedText > pre {
+  overflow: visible;
+}
+
+
 .jp-Tooltip:focus {
   outline: 0;
 }
